Fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,17 @@ body {
   font-size: 15px;
 }
 
+#portWrapper {
+  overflow: hidden;
+  height: 80vh;
+}
+
 #portfolio {
   overflow-y: auto;
   padding-bottom: 30px;
-  height: 80vh;
+  max-height: 100%;
+  overflow-x: hidden;
+  margin-left: -10px;
 }
 
 .portfolio{
